# CMDA_Capstone

./: .gitignore  CodeMetricTest.py  DocuMetrics.py  MANIFEST.in  README.md  TODO.md  accuracy.py  pyproject.toml  todo.md
analyzer/: CodeAnalyzer.py  CodeMetrics.py  CodeParser.py  DocuMetrics.py  FileLoader.py  MetricsDisplay.py  ScoreAggregator.py  globals.py
code/: CodeAnalyzer.py  CodeMetrics.py  CodeParser.py  DocuMetrics.py  FileLoader.py  MetricsDisplay.py  ScoreAggregator.py  constants.py  globals.py  intialidea.py  refactor.py
dashboard/: all_metrics_combined.csv  app.py
dashboard/templates/: Dashboard.html  base.html  welcome.html
dashboard/uploads/: fast_fibonacci_chatgpt_llm.py
data/: bad_code.py  good_code.py  sample_code.py  sample_code_bad.py  sample_mildly_acc.py  sample_mildly_acc_1.py  sample_mildly_acc_2.py  sample_not_acc.py  sample_not_acc_1.py  sample_not_acc_2.py  sample_very_acc.py  sample_very_acc_1.py  sample_very_acc_2.py
data/demo/: add.py  add_llm.py  norm_filter.py  norm_filter_llm.py  sklearn.py  sklearn_llm.py
data/eval/: convolution_neural_network.py  convolution_neural_network_llm.py  gradient_descent.py  gradient_descent_llm.py
deprecated/: deprecated.py
exports/: all_metrics_combined.csv  file_level_metrics.csv  project_level_metrics.csv
legacy/: DocuMetrics_V1.py
mydashboard/: all_metrics_combined.csv  app.py
outputs/: all_metrics_combined.csv
src/: CodeAnalyzer.py  CodeMetrics.py  CodeParser.py  DocuMetrics.py  FileLoader.py  MetricsDisplay.py  ScoreAggregator.py
tests/: temp.txt  test_accuracy.py
(+60 files in other folders)
